--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build": "sucrase ./src -d ./dist --transforms imports",
+    "start": "node -r dotenv/config ./dist/index.js",
     "dev": "nodemon --inspect src/index.js"
   },
   "dependencies": {
